Bug 393652 - Trunk builds on Mac do not quit from menu after first window is closed. r=benjamin@smedbergs.us (Benjamin Smedberg) Toolkit Only, no approval.